Project

General

Profile

Actions

Bug #5470

closed

r33507 and r33508 break the build under MinGW

Bug #5470: r33507 and r33508 break the build under MinGW

Added by luislavena (Luis Lavena) almost 15 years ago. Updated almost 15 years ago.

Status:
Closed
Target version:
-
ruby -v:
-
Backport:
[ruby-core:40281]

Description

Definition and usage of rb_fd_set_cloexec cause MinGW (GCC 4.5.2 and GCC 4.6.1)

Usage of F_GETFD FD_CLOEXEC and F_SETFD should be isolated per-platform.

PS: Since we are targeting 2.0, any desire to generate platform-specific code sections? [ruby-core:38940]

Updated by akr (Akira Tanaka) almost 15 years ago Actions #1 [ruby-core:40282]

  • ruby -v changed from trunk r33508 to -

2011/10/23 Luis Lavena :

Bug #5470: r33507 and r33508 break the build under MinGW
http://redmine.ruby-lang.org/issues/5470

Definition and usage of rb_fd_set_cloexec cause MinGW (GCC 4.5.2 and GCC 4.6.1)

Usage of F_GETFD FD_CLOEXEC and F_SETFD should be isolated per-platform.

Would you show the error messages?

I don't have MinGW platform.

Tanaka Akira

Updated by luislavena (Luis Lavena) almost 15 years ago Actions #2 [ruby-core:40283]

On Sun, Oct 23, 2011 at 12:43 AM, Tanaka Akira wrote:

Would you show the error messages?

compiling ../../../../ruby/io.c
../../../../ruby/io.c: In function 'rb_fd_set_cloexec':
../../../../ruby/io.c:163:23: error: 'F_GETFD' undeclared (first use
in this function)
../../../../ruby/io.c:163:23: note: each undeclared identifier is
reported only once for each function it appears in
../../../../ruby/io.c:168:23: error: 'FD_CLOEXEC' undeclared (first
use in this function)
../../../../ruby/io.c:170:29: error: 'F_SETFD' undeclared (first use
in this function)
make: *** [io.o] Error 1

I don't have MinGW platform.

This can also be triggered by using mingw.org or mingw-w64
cross-compilers in both Linux and OSX platforms.

--
Luis Lavena
AREA 17

Perfection in design is achieved not when there is nothing more to add,
but rather when there is nothing more to take away.
Antoine de Saint-Exupéry

Updated by akr (Akira Tanaka) almost 15 years ago Actions #3 [ruby-core:40285]

  • Status changed from Open to Closed

Updated by naruse (Yui NARUSE) almost 15 years ago Actions #4

  • Project changed from 14 to Ruby
  • Target version deleted (2.6)
Actions

Also available in: PDF Atom