* io.c (rb_fd_set_cloexec): set close-on-exec flag only if F_GETFD is   defined.  reported by Luis Lavena.  [ruby-core:40281] [Bug #5470]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@33509 b2dd03c8-39d4-4d8f-98ff-823fe69b080e